name:                tigyog
version:             0.0.1
synopsis:            In-repository project management
homepage:            http://to.be.determined/
license:             GPL-3
license-file:        LICENSE
author:              James H. Fisher
maintainer:          jameshfisher@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable tigyog
  main-is: src/Tigyog/Web.hs
  -- other-modules:
  build-depends:  base ==4.6.*,
                  scotty ==0.8.*
