name:                tigyog
version:             0.0.1
synopsis:            In-repository project management
homepage:            http://to.be.determined/
license:             GPL-3
license-file:        LICENSE
author:              James H. Fisher
maintainer:          jameshfisher@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable tigyog
  hs-source-dirs: src
  main-is: Tigyog/Web.hs
  build-depends:  base ==4.6.*,
                  scotty ==0.8.*,
                  gitlib ==3.1.*,
                  gitlib-libgit2 ==3.1.*,
                  tagged ==0.7.*,
                  monad-logger ==0.3.*,
                  mtl ==2.1.*,
                  text ==0.11.*,
                  transformers ==0.3.*
  ghc-options: -Wall -Werror
